--- a/src/app/edit-user/edit-user.component.html
+++ b/src/app/edit-user/edit-user.component.html
@@ -1,3 +1,21 @@
-<p>
-  edit-user works!
-</p>
+<h4>Edit User</h4>
+
+<label>New User Name:</label>
+<input [(ngModel)]="selectedUser.name">
+<br>
+
+<label>New User Age:</label>
+<input [(ngModel)]="selectedUser.age">
+<br>
+
+<label>New User Genre:</label>
+<input [(ngModel)]="selectedUser.genre">
+<br>
+
+<label>New User Description:</label>
+<input [(ngModel)]="selectedUser.description">
+<br>
+
+<button (click)="beginUpdatingUser(selectedUser)">Update</button>
+<hr>
+<button (click)="beginDeletingUser(selectedUser)">Delete</button>
