--- a/src/app/user-list/user-list.component.html
+++ b/src/app/user-list/user-list.component.html
@@ -1,7 +1,7 @@
-<!-- <h2>User List</h2>
+<h2>User List</h2>
 
-<div *ngFor="let user of users | async" (click)="goToDetailPage(album)" class="panel panel-default">
+<div *ngFor="let user of users | async" (click)="goToDetailPage(user)" class="panel panel-default">
   <div class="panel-body">
-    <h3><em>{{album.title}}</em> by {{album.artist}}</h3>
+    <h3><em>{{user.name}}</em> -- {{user.genre}}</h3>
   </div>
-</div> -->
+</div>
