--- a/src/app/profile-detail/profile-detail.component.html
+++ b/src/app/profile-detail/profile-detail.component.html
@@ -1,3 +1,18 @@
-<p>
-  profile-detail works!
-</p>
+<div class="row">
+  <div class="col-md-9">
+    <ul>
+      <li><h3>{{(userDisplay | async).name}}</h3></li>
+      <li><h3>{{(userDisplay | async).age}}</h3></li>
+      <li><h3>{{(userDisplay | async).description}}</h3></li>
+      <li class="lastli"><h3>{{(userDisplay | async).genre}}</h3></li>
+    </ul>
+  </div>
+</div>
+
+
+
+<footer class="footer">
+  <div class="container">
+    <a class="text-muted" routerLink="admin">Admin</a>
+  </div>
+</footer>
