--- a/src/app/user-list/user-list.component.html
+++ b/src/app/user-list/user-list.component.html
@@ -1,8 +1,8 @@
 <h2>User List</h2>
 
-<div *ngFor="let user of users | async" (click)="goToDetailPage(user)" class="panel panel-default">
+<div *ngFor="let user of users | async" class="panel panel-default">
   <div class="panel-body">
-    <h3><em>{{user.name}}</em> -- {{user.genre}}</h3>
+    <h3 (click)="goToDetailPage(user)"><em>{{user.name}}</em> -- {{user.genre}}</h3>
     <div *ngIf="currentRoute === '/admin'">
       {{user.description}}
 
