--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,5 +1,10 @@
+
 <h1>Getting Know About Moviez Club</h1>
 <p>Moviez Club was founded by Hansen Ja in 2017, and has a goal to create a big community about movie. This community approach to every people in any ages, any color, and any races.
 </p>
 <br><br>
-<p>"I hope someday, we can watch any movies together with every kind of people" --- Hansen Ja</p>
+<h1>Testimonials</h1>
+<br>
+<blockquote>"I hope someday, we can watch any movies together with every kind of people" - Hansen Ja</blockquote>
+<blockquote>"Best Club Ever" - Someone</blockquote>
+<blockquote>"Someday, i wish I can be admin in this club" - Someone</blockquote>
