--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,6 +6,8 @@
     <ul class="nav navbar-nav navbar-right">
       <li><a routerLink="about">About</a></li>
       <li><a routerLink="userlist">User List</a></li>
+      <li><a routerLink="admin">Admin</a></li>
+      <li><a routerLink="event">Event</a></li>
     </ul>
   </div>
 </nav>
@@ -14,9 +16,3 @@
 
   <router-outlet></router-outlet>
 </div>
-
-<footer class="footer">
-  <div class="container">
-    <a class="text-muted" routerLink="admin">Admin</a>
-  </div>
-</footer>
