--- a/src/app/welcome/welcome.component.html
+++ b/src/app/welcome/welcome.component.html
@@ -1,1 +1,9 @@
-
+<div *ngFor="let event of events | async" class="panel panel-default">
+  <div class="panel-heading">
+    <h3 class="panel-title">{{event.title}}</h3>
+  </div>
+  <div class="panel-body">
+    <p>Date: {{event.date}}</p>
+    <p>Description {{event.description}}</p>
+  </div>
+</div>
